TodoApi/k8s-manifests/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: webapi-crud
  annotations:
    cloud.google.com/neg: '{"ingress": true}'
spec:
  type: LoadBalancer 
  selector:
    app: webapi-crud
  ports:
  - port: 80
    targetPort: 9080
